fix $toasts on mobile

--- a/assets/defaults.sass
+++ b/assets/defaults.sass
@@ -268,6 +268,14 @@ $bk-sidebar: 650px
             color: var(--blue)
             text-decoration: none
 
+    @media (max-width: 650px)
+        width: 100vw
+        &:last-child
+            border-radius: calc(var(--border-radius) * 2)
+            border-bottom-left-radius: 0
+            border-bottom-right-radius: 0
+
+
 //=====================
 //        LINKS
 //=====================
